[project]
name = "mcp-thing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "mcp[cli]>=1.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.4",
]
